# code-embarcados

./: .projections.json  CMakeLists.txt  Makefile  README.md  array.c  array.h  complex.c  complex.h  configure.h  datatype.h  dependencias.md  except.h  help.c  help.h  hp50g.h  integer.h  karray.c  karray.h  kmatrix.c  kmatrix.h  list.c  list.h  ltype.h  main.c  matrix.c  matrix.h  narray.c  poly.c  poly.c.txt  poly.h  polynomial.c  pythagoras.c  pythagoras.h  real.h  test-1.gdb  test_full.c  ulist.c  ulist.h  util.h
kernel/: except.h  fact.c  hp50g.h  karray.c  karray.h  kmatrix.c  kmatrix.h  list.c  narray.h  polynomial.h  pythagoras.h  real.h  util.h
ss/: Makefile  exemplo12.c  main  main.c  parser.c  parser.h
test/: Makefile
test/array/: Makefile
test/array/01-test/: main.c
test/array/02-test/: main.c
test/array/03-test/: Makefile  main.c
test/array/04-test/: main.c
test/array/05-test/: Makefile  main.c
test/array/06-test/: main.c
test/complex/: Makefile
test/complex/01-test/: Makefile  main  main.c
test/complex/02-test/: main.c
test/complex/03-test/: Makefile  main  main.c
test/complex/04-test/: main  main.c
test/complex/05-test/: main.c
test/complex/06-test/: main.c
test/complex/07-test/: main.c
test/complex/08-test/: Makefile  main.c
test/complex/09-test/: main.c
test/complex/10-test/: Makefile  main  main.c
test/complex/11-test/: Makefile  main  main.c
test/decNumber/01-test/: decBasic.c  decContext.c  decQuad.c  decimal128.c  decimal32.c  decimal64.c  example1  example1.c  (+10 more)
test/matrix/: Makefile
test/poly/: Makefile
(+38 files in other folders)
